--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,10 +7,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>
+    <%= typeof title != 'undefined' ? title: 'My Celiac Husband'%> 
+  </title>
 </head>
 <body>
   <%- body -%> 
   
 </body>
-</html>
+</html> 
