--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,109 @@
-<h1>Hello World</h1>
+<!-- Image -->
+<div class="row flex-lg-reverse align-items-center g5 py-4 mb-4">
+  <div class="col-12 col-lg-6">
+    <img src="/img/hero-image.png" width="607" height="510" class="d-block mx-lg-auto img-fluid" loading="lazy" alt="My Celiac Husband">
+  </div>
+
+  <!-- Text -->
+  <div class="col-12 col-lg-6">
+    <h1 class="display-5 fw-bold mb-3">A vast yummy selections of delicios Gluten Free recipes!</h1>
+    <p class="lead">
+      Explore our huge selection of delicious gluten free recipes ideas including; easy desserts, gorgeous pasta recipes, quick bakes, family-friendly meals.
+    </p>
+
+    <div class="d-grid grap-2 d-md-flex justify-content-md-start">
+      <a href="/explore-latest" class="btn btn-primary btn-dark btn-lg px-4 me-md-2">Explore Latest Recipes</a>
+      <a href="/random-recipe" class="btn btn-outline-secondary btn-lg px-4 me-md-2">Show Randow Recipes</a>
+    </div>
+  </div>
+</div>
+
+<!-- Categories Card Start -->
+<div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 py-4">
+  <a href="#" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/img/american-food.jpg" alt="American Food" loading="lazy">
+    </div>
+    <div class="pt-1">American Food</div>
+  </a>
+  <a href="#" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/img/american-food.jpg" alt="American Food" loading="lazy">
+    </div>
+    <div class="pt-1">American Food</div>
+  </a>
+  <a href="#" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/img/american-food.jpg" alt="American Food" loading="lazy">
+    </div>
+    <div class="pt-1">American Food</div>
+  </a>
+  <a href="#" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/img/american-food.jpg" alt="American Food" loading="lazy">
+    </div>
+    <div class="pt-1">American Food</div>
+  </a>
+  <a href="#" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/img/american-food.jpg" alt="American Food" loading="lazy">
+    </div>
+    <div class="pt-1">American Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/img/view-all.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">View All Categories</div>
+  </a>
+</div>
+<!-- Categories END -->
+
+<!-- Latest Recipes Card Start -->
+<section class="pb-4 pt-4">
+  <div class="d-flex mb-2 align-items-center">
+    <h2>Explore Latest</h2>
+    <a href="/explore/latest" class="ms-auto">View More</a>
+  </div>
+
+  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+    <a href="/recipe/#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+      </div>
+      <div class="pt-1">Chocolate Banoffe</div>
+    </a>
+
+    <a href="/recipe/#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+      </div>
+      <div class="pt-1">Chocolate Banoffe</div>
+    </a>
+
+    <a href="/recipe/#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+      </div>
+      <div class="pt-1">Chocolate Banoffe</div>
+    </a>
+
+    <a href="/recipe/#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+      </div>
+      <div class="pt-1">Chocolate Banoffe</div>
+    </a>
+
+    <a href="/recipe/#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+      </div>
+      <div class="pt-1">Chocolate Banoffe</div>
+    </a>
+
+  </div>
+
+</section>
+
+<!-- Latest Recipes END -->
