--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,9 +101,21 @@
       </div>
       <div class="pt-1">Chocolate Banoffe</div>
     </a>
-
   </div>
-
 </section>
-
 <!-- Latest Recipes END -->
+
+<!-- Submit Section Start -->
+<section class="px-4 py-5 text-center">
+  <img src="/img/publish-recipe.png" class="d-blck mx-auto mb-4 img-fluid" alt="Publish your Recipe for Free today" width="566" height="208" loading="lazy">
+  <h1 class="display-5 fw-blod">Publish your Recipe for Free today!</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">Publish your Recipe in front of thousands of people for free.</p> 
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+      <a href="/submit_recipe" class="btn btn-primary btn-dark btn-lg">Submit Recipe</a>
+    </div>
+  </div>
+</section>
+<!-- Submit Section End -->
+
+
