--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
     <div class="pt-1">View All Categories</div>
   </a>
 </div>
-<!-- Categories END -->
+<!-- Categories Card END -->
 
 <!-- Latest Recipes Card Start -->
 <section class="pb-4 pt-4">
