--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,20 +20,20 @@
 
 <!-- Categories Card Start -->
 <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 py-4">
-
   <% if(categories != '') { %> 
-    <% categories.forEach(function(category, index) {  %> 
-      <a href="/categories/<%- category.name %>" class="col text-center category__link">
-        <div class="category__img shadow">
-          <img src="img/<%- category.image %> " alt="<%- category.name %>" loading="lazy">
-        </div>
-        <div class="pt-1"><%- category.name %></div>
-      </a>
-      <% }) %> 
-  <% } %> 
+      <% categories.forEach(function(category, index) {  %> 
+        <a href="/categories/<%- category.name %>" class="col text-center category__link">
+          <div class="category__img shadow">
+            <img src="img/<%- category.image %> " alt="<%- category.name %>" loading="lazy">
+          </div>
+          <div class="pt-1"><%- category.name %></div>
+        </a>
+        <% }) %> 
+    <% } %>  
+
   <a href="/categories" class="col text-center category__link">
     <div class="category__img shadow">
-      <img src="/img/view-all.jpg" alt="View All Categories" loading="lazy">
+      <img src="/img/view-all.jpeg" alt="View All Categories" loading="lazy">
     </div>
     <div class="pt-1">View All Categories</div>
   </a>
@@ -50,37 +50,33 @@
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
     <a href="/recipe/#" class="col text-center category__link">
       <div class="category__img category__img--large shadow">
-        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
       </div>
-      <div class="pt-1">Chocolate Banoffe</div>
+      <div class="pt-1">Pistachio Cookie</div>
     </a>
-
     <a href="/recipe/#" class="col text-center category__link">
       <div class="category__img category__img--large shadow">
-        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
       </div>
-      <div class="pt-1">Chocolate Banoffe</div>
+      <div class="pt-1">Pistachio Cookie</div>
     </a>
-
     <a href="/recipe/#" class="col text-center category__link">
       <div class="category__img category__img--large shadow">
-        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
       </div>
-      <div class="pt-1">Chocolate Banoffe</div>
+      <div class="pt-1">Pistachio Cookie</div>
     </a>
-
     <a href="/recipe/#" class="col text-center category__link">
       <div class="category__img category__img--large shadow">
-        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
       </div>
-      <div class="pt-1">Chocolate Banoffe</div>
+      <div class="pt-1">Pistachio Cookie</div>
     </a>
-
     <a href="/recipe/#" class="col text-center category__link">
       <div class="category__img category__img--large shadow">
-        <img src="img/chocolate-banoffe-whoopie-pies.jpg" alt="Chocolate Banoffe" loading="lazy">
+        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
       </div>
-      <div class="pt-1">Chocolate Banoffe</div>
+      <div class="pt-1">Pistachio Cookie</div>
     </a>
   </div>
 </section>
