--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,36 +48,19 @@
   </div>
 
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <a href="/recipe/#" class="col text-center category__link">
-      <div class="category__img category__img--large shadow">
-        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
-      </div>
-      <div class="pt-1">Pistachio Cookie</div>
-    </a>
-    <a href="/recipe/#" class="col text-center category__link">
-      <div class="category__img category__img--large shadow">
-        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
-      </div>
-      <div class="pt-1">Pistachio Cookie</div>
-    </a>
-    <a href="/recipe/#" class="col text-center category__link">
-      <div class="category__img category__img--large shadow">
-        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
-      </div>
-      <div class="pt-1">Pistachio Cookie</div>
-    </a>
-    <a href="/recipe/#" class="col text-center category__link">
-      <div class="category__img category__img--large shadow">
-        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
-      </div>
-      <div class="pt-1">Pistachio Cookie</div>
-    </a>
-    <a href="/recipe/#" class="col text-center category__link">
-      <div class="category__img category__img--large shadow">
-        <img src="img/pistachioCookies.jpeg" alt="Pistachio Cookie" loading="lazy">
-      </div>
-      <div class="pt-1">Pistachio Cookie</div>
-    </a>
+    <% if(food != '') { %>	
+      <% food.latest.forEach(function(recipe, index){ %>	
+      <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">	
+        <div class="category__img category__img--large shadow">	
+          <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" loading="lazy">	
+        </div>	
+        <div class="pt-1"><%= recipe.name %></div>	
+      </a>	
+      <% }) %>	
+    <% } else { %>	
+      <p>No items found.</p>	
+    <% } %>	
+
   </div>
 </section>
 <!-- Latest Recipes END -->
